[package]
name = "psp-reddit-test"
version = "0.1.0"
edition = "2021"

[dependencies]
psp = { git = "https://github.com/overdrivenpotato/rust-psp.git" }
serde-json-core = "0.5.0"
reqwless = { git = "https://github.com/drogue-iot/reqwless.git", features = ["alloc"] }
embedded-io = "0.4.0"
embedded-nal-async = "0.4.0"
cassette = "0.2.3"
sha2 = { version = "0.10.6", default-features = false }